--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: World Viral Product Hunter
 
 on:
-  schedule:
-    - cron: '0 5 * * *'   # Runs daily at 05:00 UTC
   workflow_dispatch:
+  schedule:
+    - cron: '0 5 * * *'
 
 jobs:
   run-hunter:
@@ -16,13 +16,10 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm install
 
       - name: Run Viral Product Hunter
         run: node index.js
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
