--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
-  "name": "astroman-ai-bot",
+  "name": "astroman-marketing-agent",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
-    "node-telegram-bot-api": "^0.64.0",
-    "openai": "^4.52.7"
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.4.5"
   }
 }
